Examples/CPP_GeometryKernel/Engine/engine.h



//
//		GetPropertyByName                           (http://rdf.bg/gkdoc/CP64/GetPropertyByName.html)
//				int64_t				model								IN
//				const char			* name								IN
//
//				int64_t				returns								OUT
//
//	Returns a handle to the objectTypeProperty or dataTypeProperty as stored inside.
//	When the property does not exist yet and the name is unique
//	the property will be created on-the-fly and the handle will be returned.
//	When the name is not unique and given to a class or instance 0 will be returned.
//
int64_t		DECL STDC	GetPropertyByName(
									int64_t				model,
									const char			* name
								);


//
//		GetPropertyByNameW                          (http://rdf.bg/gkdoc/CP64/GetPropertyByNameW.html)
//				int64_t				model								IN
//				const wchar_t		* name								IN
//
//				int64_t				returns								OUT
//
//	Returns a handle to the objectTypeProperty or dataTypeProperty as stored inside.
//	When the property does not exist yet and the name is unique
//	the property will be created on-the-fly and the handle will be returned.
//	When the name is not unique and given to a class or instance 0 will be returned.
//
int64_t		DECL STDC	GetPropertyByNameW(
									int64_t				model,
									const wchar_t		* name
								);


//
//		GetPropertiesByIterator                     (http://rdf.bg/gkdoc/CP64/GetPropertiesByIterator.html)
//				int64_t				model								IN
//				int64_t				rdfProperty							IN
//
//				int64_t				returns								OUT
//
//	Returns a handle to a property.
//	If input property is zero, the handle will point to the first relevant property.
//	If all properties are past (or no relevant properties are found), the function will return 0.
//
int64_t		DECL STDC	GetPropertiesByIterator(
									int64_t				model,
									int64_t				rdfProperty
								);


//
//		GetRangeRestrictionsByIterator              (http://rdf.bg/gkdoc/CP64/GetRangeRestrictionsByIterator.html)
//				int64_t				rdfProperty							IN
//				int64_t				owlClass							IN
//
//				int64_t				returns								OUT
//
//	Returns the next class the property is restricted to.
//	If input class is zero, the handle will point to the first relevant class.
//	If all classes are past (or no relevant classes are found), the function will return 0.
//
int64_t		DECL STDC	GetRangeRestrictionsByIterator(
									int64_t				rdfProperty,
									int64_t				owlClass
								);


//
//		SetNameOfProperty                           (http://rdf.bg/gkdoc/CP64/SetNameOfProperty.html)
//				int64_t				rdfProperty							IN
//				const char			* name								IN
//
//				int64_t				returns								OUT
//
//	Sets/updates the name of the property, if no error it returns 0.
//	In case property does not exist it returns 1, when name cannot be updated 2.
//
int64_t		DECL STDC	SetNameOfProperty(
									int64_t				rdfProperty,
									const char			* name
								);


//
//		SetNameOfPropertyW                          (http://rdf.bg/gkdoc/CP64/SetNameOfPropertyW.html)
//				int64_t				rdfProperty							IN
//				const wchar_t		* name								IN
//
//				int64_t				returns								OUT
//
//	Sets/updates the name of the property, if no error it returns 0.
//	In case property does not exist it returns 1, when name cannot be updated 2.
//
int64_t		DECL STDC	SetNameOfPropertyW(
									int64_t				rdfProperty,
									const wchar_t		* name
								);


//
//		SetNameOfPropertyEx                         (http://rdf.bg/gkdoc/CP64/SetNameOfPropertyEx.html)
//				int64_t				model								IN
//				int64_t				rdfProperty							IN
//				const char			* name								IN
//
//				int64_t				returns								OUT
//
//	Sets/updates the name of the property, if no error it returns 0.
//	In case property does not exist it returns 1, when name cannot be updated 2.
//
int64_t		DECL STDC	SetNameOfPropertyEx(
									int64_t				model,
									int64_t				rdfProperty,
									const char			* name
								);


//
//		SetNameOfPropertyWEx                        (http://rdf.bg/gkdoc/CP64/SetNameOfPropertyWEx.html)
//				int64_t				model								IN
//				int64_t				rdfProperty							IN
//				const wchar_t		* name								IN
//
//				int64_t				returns								OUT
//
//	Sets/updates the name of the property, if no error it returns 0.
//	In case property does not exist it returns 1, when name cannot be updated 2.
//
int64_t		DECL STDC	SetNameOfPropertyWEx(
									int64_t				model,
									int64_t				rdfProperty,
									const wchar_t		* name
								);


//
//		GetNameOfProperty                           (http://rdf.bg/gkdoc/CP64/GetNameOfProperty.html)
//				int64_t				rdfProperty							IN
//				char				** name								IN / OUT
//
//				void				returns
//
//	Returns the name of the property, if the property does not exist it returns nullptr.
//
void		DECL STDC	GetNameOfProperty(
									int64_t				rdfProperty,
									char				** name
								);


//
//		GetNameOfPropertyW                          (http://rdf.bg/gkdoc/CP64/GetNameOfPropertyW.html)
//				int64_t				rdfProperty							IN
//				wchar_t				** name								IN / OUT
//
//				void				returns
//
//	Returns the name of the property, if the property does not exist it returns nullptr.
//
void		DECL STDC	GetNameOfPropertyW(
									int64_t				rdfProperty,
									wchar_t				** name
								);


//
//		GetNameOfPropertyEx                         (http://rdf.bg/gkdoc/CP64/GetNameOfPropertyEx.html)
//				int64_t				model								IN
//				int64_t				rdfProperty							IN
//				char				** name								IN / OUT
//
//				void				returns
//
//	Returns the name of the property, if the property does not exist it returns nullptr.
//
void		DECL STDC	GetNameOfPropertyEx(
									int64_t				model,
									int64_t				rdfProperty,
									char				** name
								);


//
//		GetNameOfPropertyWEx                        (http://rdf.bg/gkdoc/CP64/GetNameOfPropertyWEx.html)
//				int64_t				model								IN
//				int64_t				rdfProperty							IN
//				wchar_t				** name								IN / OUT
//
//				void				returns
//
//	Returns the name of the property, if the property does not exist it returns nullptr.
//
void		DECL STDC	GetNameOfPropertyWEx(
									int64_t				model,
									int64_t				rdfProperty,
									wchar_t				** name
								);


//
//		SetPropertyType                             (http://rdf.bg/gkdoc/CP64/SetPropertyType.html)
//				int64_t				rdfProperty							IN
//				int64_t				propertyType						IN
//
//				int64_t				returns								OUT
//
//	This function sets the type of the property. This is only allowed
//	if the type of the property was not set before.
//
//	The following values are possible for propertyType:
//			1	The property is an Object Property
//			2	The property is an Datatype Property of type Boolean
//			3	The property is an Datatype Property of type Char
//			4	The property is an Datatype Property of type Integer
//			5	The property is an Datatype Property of type Double
//	The return value of this call is GetPropertyType/Ex applied after applying
//	the type, normally this corresponds with the propertyType requested
//	to be set unless the property already has a different propertyType set before.
//
int64_t		DECL STDC	SetPropertyType(
									int64_t				rdfProperty,
									int64_t				propertyType
								);


//
//		SetPropertyTypeEx                           (http://rdf.bg/gkdoc/CP64/SetPropertyTypeEx.html)
//				int64_t				model								IN
//				int64_t				rdfProperty							IN
//				int64_t				propertyType						IN
//
//				int64_t				returns								OUT
//
//
int64_t		DECL STDC	SetPropertyTypeEx(
									int64_t				model,
									int64_t				rdfProperty,
									int64_t				propertyType
								);


//
//		GetPropertyType                             (http://rdf.bg/gkdoc/CP64/GetPropertyType.html)
//				int64_t				rdfProperty							IN
//
//				int64_t				returns								OUT
//
//	This function returns the type of the property.
//	The following return values are possible:
//		0	The property is not defined yet
//		1	The property is an Object Type Property
//		2	The property is an Data Type Property of type Boolean
//		3	The property is an Data Type Property of type Char
//		4	The property is an Data Type Property of type Integer
//		5	The property is an Data Type Property of type Double
//
int64_t		DECL STDC	GetPropertyType(
									int64_t				rdfProperty
								);


//
//		GetPropertyTypeEx                           (http://rdf.bg/gkdoc/CP64/GetPropertyTypeEx.html)
//				int64_t				model								IN
//				int64_t				rdfProperty							IN
//
//				int64_t				returns								OUT
//
//	This call has the same behavior as GetPropertyType, however needs to be
//	used in case properties are exchanged as a successive series of integers.
//
int64_t		DECL STDC	GetPropertyTypeEx(
									int64_t				model,
									int64_t				rdfProperty
								);


//
//		RemoveProperty                              (http://rdf.bg/gkdoc/CP64/RemoveProperty.html)
//				int64_t				rdfProperty							IN
//
//				int64_t				returns								OUT
//
//	This call is named remove property instead of a at first sight more logical name delete property as all content depending on this property is not lost per se.
//	Each properties having the removed property as a parent will now inherit ther parents of the removed property.
//	All property values in the context of an instance will become property values of the parent property, or in case no parent property is defined the values are lost.
//	The return value represents a bit set defining findings during the removal, if a clean removal with no side effects was possible the return value is 0. In all other cases 
//	the following bits represent the findings during removal:
//		bit 0:
//			0	Iunput as expected
//			1	Encountered an issue on input value, i.e. property was not recognized as property
//		bit 1:
//			0	No 'child' properties found
//			1	Properties found that had this property as a parent, they are adjusted by inheriting directly removed properties parents if present
//		bit 2:
//			0	No instances found with value restrictions for this property
//			1	Vertex does contain 3D point info
//		bit 3:
//			0	No instances found with values for this property
//			1	Vertex does contain 3D normal vector info => if set, bit 4 will also be set
//		bit 6:
//			0	Vertex does not contain first 2D texture info
//			1	Vertex does contain first 2D texture info
//		bit 7:
//			0	Vertex does not contain second 2D texture info
//			1	Vertex does contain second 2D texture info => if set, bit 6 will also be set
//
//		0	The property is not defined yet
//		1	The property is an Object Type Property
//		2	The property is an Data Type Property of type Boolean
//		3	The property is an Data Type Property of type Char
//		4	The property is an Data Type Property of type Integer
//		5	The property is an Data Type Property of type Double
//
int64_t		DECL STDC	RemoveProperty(
									int64_t				rdfProperty
								);