engine.cs


		//
		//		GetPropertyByName                           (http://rdf.bg/gkdoc/CS64/GetPropertyByName.html)
		//
		//	Returns a handle to the objectTypeProperty or dataTypeProperty as stored inside.
		//	When the property does not exist yet and the name is unique
		//	the property will be created on-the-fly and the handle will be returned.
		//	When the name is not unique and given to a class or instance 0 will be returned.
		//
        [DllImport(EngineDLL, EntryPoint = "GetPropertyByName")]
        public static extern Int64 GetPropertyByName(Int64 model, string name);

        [DllImport(EngineDLL, EntryPoint = "GetPropertyByName")]
        public static extern Int64 GetPropertyByName(Int64 model, byte[] name);

		//
		//		GetPropertyByNameW                          (http://rdf.bg/gkdoc/CS64/GetPropertyByNameW.html)
		//
		//	Returns a handle to the objectTypeProperty or dataTypeProperty as stored inside.
		//	When the property does not exist yet and the name is unique
		//	the property will be created on-the-fly and the handle will be returned.
		//	When the name is not unique and given to a class or instance 0 will be returned.
		//
        [DllImport(EngineDLL, EntryPoint = "GetPropertyByNameW")]
        public static extern Int64 GetPropertyByNameW(Int64 model, string name);

        [DllImport(EngineDLL, EntryPoint = "GetPropertyByNameW")]
        public static extern Int64 GetPropertyByNameW(Int64 model, byte[] name);

		//
		//		GetPropertiesByIterator                     (http://rdf.bg/gkdoc/CS64/GetPropertiesByIterator.html)
		//
		//	Returns a handle to a property.
		//	If input property is zero, the handle will point to the first relevant property.
		//	If all properties are past (or no relevant properties are found), the function will return 0.
		//
        [DllImport(EngineDLL, EntryPoint = "GetPropertiesByIterator")]
        public static extern Int64 GetPropertiesByIterator(Int64 model, Int64 rdfProperty);

		//
		//		GetRangeRestrictionsByIterator              (http://rdf.bg/gkdoc/CS64/GetRangeRestrictionsByIterator.html)
		//
		//	Returns the next class the property is restricted to.
		//	If input class is zero, the handle will point to the first relevant class.
		//	If all classes are past (or no relevant classes are found), the function will return 0.
		//
        [DllImport(EngineDLL, EntryPoint = "GetRangeRestrictionsByIterator")]
        public static extern Int64 GetRangeRestrictionsByIterator(Int64 rdfProperty, Int64 owlClass);

		//
		//		SetNameOfProperty                           (http://rdf.bg/gkdoc/CS64/SetNameOfProperty.html)
		//
		//	Sets/updates the name of the property, if no error it returns 0.
		//	In case property does not exist it returns 1, when name cannot be updated 2.
		//
        [DllImport(EngineDLL, EntryPoint = "SetNameOfProperty")]
        public static extern Int64 SetNameOfProperty(Int64 rdfProperty, string name);

        [DllImport(EngineDLL, EntryPoint = "SetNameOfProperty")]
        public static extern Int64 SetNameOfProperty(Int64 rdfProperty, byte[] name);

		//
		//		SetNameOfPropertyW                          (http://rdf.bg/gkdoc/CS64/SetNameOfPropertyW.html)
		//
		//	Sets/updates the name of the property, if no error it returns 0.
		//	In case property does not exist it returns 1, when name cannot be updated 2.
		//
        [DllImport(EngineDLL, EntryPoint = "SetNameOfPropertyW")]
        public static extern Int64 SetNameOfPropertyW(Int64 rdfProperty, string name);

        [DllImport(EngineDLL, EntryPoint = "SetNameOfPropertyW")]
        public static extern Int64 SetNameOfPropertyW(Int64 rdfProperty, byte[] name);

		//
		//		SetNameOfPropertyEx                         (http://rdf.bg/gkdoc/CS64/SetNameOfPropertyEx.html)
		//
		//	Sets/updates the name of the property, if no error it returns 0.
		//	In case property does not exist it returns 1, when name cannot be updated 2.
		//
        [DllImport(EngineDLL, EntryPoint = "SetNameOfPropertyEx")]
        public static extern Int64 SetNameOfPropertyEx(Int64 model, Int64 rdfProperty, string name);

        [DllImport(EngineDLL, EntryPoint = "SetNameOfPropertyEx")]
        public static extern Int64 SetNameOfPropertyEx(Int64 model, Int64 rdfProperty, byte[] name);

		//
		//		SetNameOfPropertyWEx                        (http://rdf.bg/gkdoc/CS64/SetNameOfPropertyWEx.html)
		//
		//	Sets/updates the name of the property, if no error it returns 0.
		//	In case property does not exist it returns 1, when name cannot be updated 2.
		//
        [DllImport(EngineDLL, EntryPoint = "SetNameOfPropertyWEx")]
        public static extern Int64 SetNameOfPropertyWEx(Int64 model, Int64 rdfProperty, string name);

        [DllImport(EngineDLL, EntryPoint = "SetNameOfPropertyWEx")]
        public static extern Int64 SetNameOfPropertyWEx(Int64 model, Int64 rdfProperty, byte[] name);

		//
		//		GetNameOfProperty                           (http://rdf.bg/gkdoc/CS64/GetNameOfProperty.html)
		//
		//	Returns the name of the property, if the property does not exist it returns nullptr.
		//
        [DllImport(EngineDLL, EntryPoint = "GetNameOfProperty")]
        public static extern void GetNameOfProperty(Int64 rdfProperty, out IntPtr name);

		//
		//		GetNameOfPropertyW                          (http://rdf.bg/gkdoc/CS64/GetNameOfPropertyW.html)
		//
		//	Returns the name of the property, if the property does not exist it returns nullptr.
		//
        [DllImport(EngineDLL, EntryPoint = "GetNameOfPropertyW")]
        public static extern void GetNameOfPropertyW(Int64 rdfProperty, out IntPtr name);

		//
		//		GetNameOfPropertyEx                         (http://rdf.bg/gkdoc/CS64/GetNameOfPropertyEx.html)
		//
		//	Returns the name of the property, if the property does not exist it returns nullptr.
		//
        [DllImport(EngineDLL, EntryPoint = "GetNameOfPropertyEx")]
        public static extern void GetNameOfPropertyEx(Int64 model, Int64 rdfProperty, out IntPtr name);

		//
		//		GetNameOfPropertyWEx                        (http://rdf.bg/gkdoc/CS64/GetNameOfPropertyWEx.html)
		//
		//	Returns the name of the property, if the property does not exist it returns nullptr.
		//
        [DllImport(EngineDLL, EntryPoint = "GetNameOfPropertyWEx")]
        public static extern void GetNameOfPropertyWEx(Int64 model, Int64 rdfProperty, out IntPtr name);

		//
		//		SetPropertyType                             (http://rdf.bg/gkdoc/CS64/SetPropertyType.html)
		//
		//	This function sets the type of the property. This is only allowed
		//	if the type of the property was not set before.
		//
		//	The following values are possible for propertyType:
		//			1	The property is an Object Property
		//			2	The property is an Datatype Property of type Boolean
		//			3	The property is an Datatype Property of type Char
		//			4	The property is an Datatype Property of type Integer
		//			5	The property is an Datatype Property of type Double
		//	The return value of this call is GetPropertyType/Ex applied after applying
		//	the type, normally this corresponds with the propertyType requested
		//	to be set unless the property already has a different propertyType set before.
		//
        [DllImport(EngineDLL, EntryPoint = "SetPropertyType")]
        public static extern Int64 SetPropertyType(Int64 rdfProperty, Int64 propertyType);

		//
		//		SetPropertyTypeEx                           (http://rdf.bg/gkdoc/CS64/SetPropertyTypeEx.html)
		//
		//
        [DllImport(EngineDLL, EntryPoint = "SetPropertyTypeEx")]
        public static extern Int64 SetPropertyTypeEx(Int64 model, Int64 rdfProperty, Int64 propertyType);

		//
		//		GetPropertyType                             (http://rdf.bg/gkdoc/CS64/GetPropertyType.html)
		//
		//	This function returns the type of the property.
		//	The following return values are possible:
		//		0	The property is not defined yet
		//		1	The property is an Object Type Property
		//		2	The property is an Data Type Property of type Boolean
		//		3	The property is an Data Type Property of type Char
		//		4	The property is an Data Type Property of type Integer
		//		5	The property is an Data Type Property of type Double
		//
        [DllImport(EngineDLL, EntryPoint = "GetPropertyType")]
        public static extern Int64 GetPropertyType(Int64 rdfProperty);

		//
		//		GetPropertyTypeEx                           (http://rdf.bg/gkdoc/CS64/GetPropertyTypeEx.html)
		//
		//	This call has the same behavior as GetPropertyType, however needs to be
		//	used in case properties are exchanged as a successive series of integers.
		//
        [DllImport(EngineDLL, EntryPoint = "GetPropertyTypeEx")]
        public static extern Int64 GetPropertyTypeEx(Int64 model, Int64 rdfProperty);

		//
		//		RemoveProperty                              (http://rdf.bg/gkdoc/CS64/RemoveProperty.html)
		//
		//	This call is named remove property instead of a at first sight more logical name delete property as all content depending on this property is not lost per se.
		//	Each properties having the removed property as a parent will now inherit ther parents of the removed property.
		//	All property values in the context of an instance will become property values of the parent property, or in case no parent property is defined the values are lost.
		//	The return value represents a bit set defining findings during the removal, if a clean removal with no side effects was possible the return value is 0. In all other cases 
		//	the following bits represent the findings during removal:
		//		bit 0:
		//			0	Iunput as expected
		//			1	Encountered an issue on input value, i.e. property was not recognized as property
		//		bit 1:
		//			0	No 'child' properties found
		//			1	Properties found that had this property as a parent, they are adjusted by inheriting directly removed properties parents if present
		//		bit 2:
		//			0	No instances found with value restrictions for this property
		//			1	Vertex does contain 3D point info
		//		bit 3:
		//			0	No instances found with values for this property
		//			1	Vertex does contain 3D normal vector info => if set, bit 4 will also be set
		//		bit 6:
		//			0	Vertex does not contain first 2D texture info
		//			1	Vertex does contain first 2D texture info
		//		bit 7:
		//			0	Vertex does not contain second 2D texture info
		//			1	Vertex does contain second 2D texture info => if set, bit 6 will also be set
		//
		//		0	The property is not defined yet
		//		1	The property is an Object Type Property
		//		2	The property is an Data Type Property of type Boolean
		//		3	The property is an Data Type Property of type Char
		//		4	The property is an Data Type Property of type Integer
		//		5	The property is an Data Type Property of type Double
		//
        [DllImport(EngineDLL, EntryPoint = "RemoveProperty")]
        public static extern Int64 RemoveProperty(Int64 rdfProperty);
